--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%220ZTmuZ7S%22%2C%2261579272091576%22%3A%22tY0AZ9XV%22%2C%2261580888129116%22%3A%22WecI3Zvs%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%220ZTmuZ7S%22%2C%2261579272091576%22%3A%22tY0AZ9XV%22%2C%2261580888129116%22%3A%22awrEKQCf%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "vpd",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61580888129116",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
-    },
-    {
-        "key": "xs",
-        "value": "24%3A5NBwV_b5GBYD7Q%3A2%3A1762842279%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "locale",
@@ -86,34 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61580888129116",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
+    },
+    {
+        "key": "xs",
+        "value": "43%3Avf5WfotzIc065Q%3A2%3A1763334035%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfXdbeEBN35g9av37RPP-8EgH-1LCmUQO0Qml8XuVmIqsjzy7w.Bn_fCK..AAA.0.0.BpFCkD.AWfJEkVQYHsdMj-_G2A8ttEOy7I",
+        "value": "0MmXGi5OoGPsKoWdq.AWe3uCkmQWxl4P5jrV4rOE5C2_xpFNq2eFS_FOkuk23XIIgV_Q4.Bn_fCK..AAA.0.0.BpGlec.AWdEWkKEl53jPvmcIxv5vzAFASs",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "fbl_st",
-        "value": "100719046%3BT%3A29382148",
+        "value": "101026465%3BT%3A29388900",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2981%3Btimestamp%3A1762928899",
+        "value": "v2%3Bclient_version%3A2985%3Btimestamp%3A1763334044",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-12T06:28:59.822Z",
-        "lastAccessed": "2025-11-12T06:28:59.822Z"
+        "creation": "2025-11-16T23:00:51.705Z",
+        "lastAccessed": "2025-11-16T23:00:51.705Z"
     }
 ]
