--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%220ZTmuZ7S%22%2C%2261579272091576%22%3A%22jyXvR6fx%22%2C%2261580888129116%22%3A%22awrEKQCf%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%220ZTmuZ7S%22%2C%2261579272091576%22%3A%22EUC93o7D%22%2C%2261580888129116%22%3A%22Fz7l2JxF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "x-referer",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "c_user",
@@ -104,43 +104,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "xs",
-        "value": "32%3AVu4ICpQ2I99kZw%3A2%3A1763910385%3A-1%3A-1",
+        "value": "41%3A9rUV_mr25HFyWg%3A2%3A1764424352%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdSiBpntHLDlkoL0pc1Ydlf2SO8Af8PUjaNbrnIHqVgXya8eV8.Bn_fCK..AAA.0.0.BpIyLz.AWfBf3BcIzvVB2oXx70LTl54lC4",
+        "value": "0MmXGi5OoGPsKoWdq.AWdnxA7UM8TYiUXb9WeuE9go7VaJQKScPCNMGqqTVvDrZIoGV9I.Bn_fCK..AAA.0.0.BpKvqj.AWd616Lxh_VAkk4CNmnqyr001EQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "fbl_st",
-        "value": "101027763%3BT%3A29398506",
+        "value": "101220644%3BT%3A29407072",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2992%3Btimestamp%3A1763910388",
+        "value": "v2%3Bclient_version%3A3000%3Btimestamp%3A1764424355",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-23T15:06:41.329Z",
-        "lastAccessed": "2025-11-23T15:06:41.329Z"
+        "creation": "2025-11-29T13:52:44.004Z",
+        "lastAccessed": "2025-11-29T13:52:44.004Z"
     }
 ]
