--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "pas",
@@ -59,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "wd",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "c_user",
@@ -95,43 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "xs",
-        "value": "22%3AZUGFOUX7HR_Lig%3A2%3A1766700237%3A-1%3A-1",
+        "value": "27%3AvHvUdg4VTLyj_g%3A2%3A1767805615%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfAOA0a2XSvroIiPCBnDPzjq-UKAAM2QdKRqHLRZmOycw7nR8w.Bn_fCK..AAA.0.0.BpTbTT.AWeX45b7-6A2VoKiOukiLxppu9g",
+        "value": "0MmXGi5OoGPsKoWdq.AWfFSaXTTI7YbzZXlfsHwm2PqO3cW5yLcOqEmVPOywWgWiBPCm8.Bn_fCK..AAA.0.0.BpXpK1.AWeCiy0uLgEaR0y50VBT6KH6yhg",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "fbl_st",
-        "value": "101327648%3BT%3A29445004",
+        "value": "101236956%3BT%3A29463427",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3030%3Btimestamp%3A1766700243",
+        "value": "v2%3Bclient_version%3A3043%3Btimestamp%3A1767805621",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-25T22:04:23.489Z",
-        "lastAccessed": "2025-12-25T22:04:23.489Z"
+        "creation": "2026-01-07T17:07:16.751Z",
+        "lastAccessed": "2026-01-07T17:07:16.751Z"
     }
 ]
