--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.009Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "pas",
@@ -59,53 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.009Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575070664257",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
-    },
-    {
-        "key": "xs",
-        "value": "33%3A-vDlUtHdQpg0Gg%3A2%3A1769176040%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWcRjbE8e9VswiM4X1KeE_3TTznNTb94o2dPk4zCYreYmnz_2WQ.Bn_fCK..AAA.0.0.Bpc3vv.AWdWwv7510bZMIcLEYvdbzFo2K0",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "locale",
@@ -113,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575070664257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
+    },
+    {
+        "key": "xs",
+        "value": "18%3Ai28Vd1Kv_QOlMQ%3A2%3A1769533907%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWef9EpBW__8b1RvnITyyI5U0qZUNgIcSvOrSiA04UFnbHdr45I.Bn_fCK..AAA.0.0.BpePHf.AWe0DIvPbFZn_o0kHm5Ayn_Qxwk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "fbl_st",
-        "value": "101333481%3BT%3A29486267",
+        "value": "100630887%3BT%3A29492232",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3058%3Btimestamp%3A1769176047",
+        "value": "v2%3Bclient_version%3A3064%3Btimestamp%3A1769533919",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-23T13:47:40.010Z",
-        "lastAccessed": "2026-01-23T13:47:40.010Z"
+        "creation": "2026-01-27T17:12:17.029Z",
+        "lastAccessed": "2026-01-27T17:12:17.029Z"
     }
 ]
