--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "ps_n",
@@ -32,62 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B733x384x2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575070664257",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "xs",
-        "value": "18%3Ai28Vd1Kv_QOlMQ%3A2%3A1769533907%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "datr",
@@ -95,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "pas",
@@ -104,43 +50,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
-        "key": "x-referer",
-        "value": "eyJyIjoiLyIsImgiOiIvIiwicyI6Im0ifQ%3D%3D",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575070664257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
+    },
+    {
+        "key": "xs",
+        "value": "23%3AlTOvmVYI08gPqA%3A2%3A1770797174%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfGfN6RKyLleffaEd6pU12_EzVlNIw2m5E2boPNbIxNLO-UWtw.Bn_fCK..AAA.0.0.BpelSc.AWdcVFkRiLBbrSrAO8oEjKRRLg0",
+        "value": "0MmXGi5OoGPsKoWdq.AWfbt51DI3F13kuMHVXStU1CYaBO2RmjFsX6nUYYn5pScRwiVTo.Bn_fCK..AAA.0.0.BpjDiF.AWcwqr4RZKO4HKjj4Wo61swZMwY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "fbl_st",
-        "value": "101736205%3BT%3A29493745",
+        "value": "101231102%3BT%3A29513286",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B733x384x2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3068%3Btimestamp%3A1769624732",
+        "value": "v2%3Bclient_version%3A3081%3Btimestamp%3A1770797190",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-28T18:25:47.162Z",
-        "lastAccessed": "2026-01-28T18:25:47.162Z"
+        "creation": "2026-02-11T08:06:46.688Z",
+        "lastAccessed": "2026-02-11T08:06:46.688Z"
     }
 ]
